hphp/hack/test/typecheck/namespace_namespace3.php.exp
File "namespace_namespace3.php", line 4, characters 19-19:
A name or __construct keyword is expected here. (Parsing[1002])
